# ChangeLog for sys-devel/gdb
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.94 2006/06/22 04:02:43 vapier Exp $

  22 Jun 2006; Mike Frysinger <vapier@gentoo.org>
  +files/gdb-6.5-locale.patch, gdb-6.5.ebuild:
  Fix issues with funky locales #125264 by J.

*gdb-6.5-r1 (21 Jun 2006)

  21 Jun 2006; <solar@gentoo.org> +files/gdb-6.5-scanmem.patch,
  +gdb-6.5-r1.ebuild:
  - bump scanmem patch

*gdb-6.5 (21 Jun 2006)

  21 Jun 2006; Mike Frysinger <vapier@gentoo.org> +gdb-6.5.ebuild:
  Version bump.

*gdb-6.4-r5 (18 Jun 2006)

  18 Jun 2006; Tony Vroon <chainsaw@gentoo.org>
  +files/gdb-6.4-ppc-stack.patch, +gdb-6.4-r5.ebuild:
  Apply upstream patch to get usable backtraces on PPC. Research by illusion
  <morgoth6@box43.pl> in bug #137125.

  03 May 2006; Diego Pettenò <flameeyes@gentoo.org> gdb-6.4-r4.ebuild:
  Add ~x86-fbsd keyword.

  27 Apr 2006; Alec Warner <antarus@gentoo.org> files/digest-gdb-6.1,
  files/digest-gdb-6.2.1, files/digest-gdb-6.3-r4, files/digest-gdb-6.3-r5,
  files/digest-gdb-6.4, files/digest-gdb-6.4-r1, files/digest-gdb-6.4-r2,
  files/digest-gdb-6.4-r3, files/digest-gdb-6.4-r4, Manifest:
  Fixing SHA256 digest, pass four

*gdb-6.4-r4 (16 Mar 2006)

  16 Mar 2006; Mike Frysinger <vapier@gentoo.org>
  +files/gdb-6.4-avr-eclipse.patch, +gdb-6.4-r4.ebuild:
  Add patch from upstream for avr/eclipse compat #126288 by Ian Hubbertz.

*gdb-6.4-r3 (05 Mar 2006)

  05 Mar 2006; Mike Frysinger <vapier@gentoo.org> +gdb-6.4-r3.ebuild:
  Drop relative patch #122050 by Stefan Knorr.

*gdb-6.3-r5 (21 Feb 2006)

  21 Feb 2006; Kevin F. Quinn <kevquinn@gentoo.org> +gdb-6.3-r5.ebuild:
  Added patches from RedHat to support PIEs in gdb-6.3

  19 Feb 2006; Joshua Kinard <kumba@gentoo.org> gdb-6.4.ebuild:
  Marked stable on mips.

*gdb-6.4-r2 (23 Jan 2006)

  23 Jan 2006; Mike Frysinger <vapier@gentoo.org>
  +files/gdb-6.3-partial-die-20050503.patch, +gdb-6.4-r2.ebuild: