@@ -85,10 +85,10 @@ AUX gdb-6.4-relative-paths.patch 3147 RMD160 f53af62cdcaaa66614d4a2c87b85698507f
 MD5 8323dafe6749f0da44b8e11ebbbc96c4 files/gdb-6.4-relative-paths.patch 3147
 RMD160 f53af62cdcaaa66614d4a2c87b85698507f904ed files/gdb-6.4-relative-paths.patch 3147
 SHA256 0b39f8ac1f6c03257a0ab1cbfff3eac7af13d38026d0cc7e11f266df48d5a540 files/gdb-6.4-relative-paths.patch 3147
-AUX gdb-6.4-scanmem.patch 6176 RMD160 9d11792f26bc252c9bbecf6921fd34900f3ac3b4 SHA1 805dad23bed96b055ca0ac541b44d9f7c2c1e4d0 SHA256 fe5b8916f4a8bec46a0ae26d5c10cfb9f57e1134510a6bef7965ce4a5ea12062
-MD5 2eb930fae4af7203dc929220ce68096c files/gdb-6.4-scanmem.patch 6176
-RMD160 9d11792f26bc252c9bbecf6921fd34900f3ac3b4 files/gdb-6.4-scanmem.patch 6176
-SHA256 fe5b8916f4a8bec46a0ae26d5c10cfb9f57e1134510a6bef7965ce4a5ea12062 files/gdb-6.4-scanmem.patch 6176
+AUX gdb-6.4-scanmem.patch 6183 RMD160 c4b6383e5724beb4bdcbd221c6319c07d345d14d SHA1 d62fd28fbaba4c62c44a1c90f4055c5d7cb7d551 SHA256 11baa82d28945ac0f8fc75e4f614a05635c9adbd7d5810b88f1de94d20a47048
+MD5 1bd9811cc367f6b16d0af45cb3229415 files/gdb-6.4-scanmem.patch 6183
+RMD160 c4b6383e5724beb4bdcbd221c6319c07d345d14d files/gdb-6.4-scanmem.patch 6183
+SHA256 11baa82d28945ac0f8fc75e4f614a05635c9adbd7d5810b88f1de94d20a47048 files/gdb-6.4-scanmem.patch 6183
 AUX gdb-6.4-sse2-register-display.patch 1533 RMD160 509311954f526e913edc127e029b201ff3edd277 SHA1 5ca1e5197bdd54411a03bb5652576c976d5d0a57 SHA256 23a9e7f0a16b6a5f8110094cc164f8085a8acf96ce1309bbb288845adcf87a6b
 MD5 ec7f411b90047b1ea848513ee5676072 files/gdb-6.4-sse2-register-display.patch 1533
 RMD160 509311954f526e913edc127e029b201ff3edd277 files/gdb-6.4-sse2-register-display.patch 1533
@@ -101,10 +101,10 @@ AUX gdb-6.5-locale.patch 1412 RMD160 525309c87b7ae98e81a1a78464f923a299f82c1e SH
 MD5 9cb8988a3052f658720f48783c21d973 files/gdb-6.5-locale.patch 1412
 RMD160 525309c87b7ae98e81a1a78464f923a299f82c1e files/gdb-6.5-locale.patch 1412
 SHA256 a96f41ae34d36863e8fe212fc14de1386800ccdd455efb8872dc0e3eec1a697c files/gdb-6.5-locale.patch 1412
-AUX gdb-6.5-scanmem.patch 6107 RMD160 4c262b2a81050df4aebae833e03e8ed9586af86a SHA1 49bf0c450b577d857103e0449bef28615ce7fa6a SHA256 146a0803de67ef16179db884bf113cd22a64c0aeab105bb3732b6080bbd97bba
-MD5 ccc3ba577dc0516a12507649017d964d files/gdb-6.5-scanmem.patch 6107
-RMD160 4c262b2a81050df4aebae833e03e8ed9586af86a files/gdb-6.5-scanmem.patch 6107
-SHA256 146a0803de67ef16179db884bf113cd22a64c0aeab105bb3732b6080bbd97bba files/gdb-6.5-scanmem.patch 6107
+AUX gdb-6.5-scanmem.patch 6114 RMD160 e5a8eb2c513a9add2abf9c876e818900f5864f1a SHA1 4d009aee0073f3e7e767087d31f932e7384f58e5 SHA256 b9cf4fdc0bc8f8fc94a410ab26d1f85f88f85b52da4f57bc43b4aaab80ff1a82
+MD5 3c330fea2199743ef3822f86c408bb5e files/gdb-6.5-scanmem.patch 6114
+RMD160 e5a8eb2c513a9add2abf9c876e818900f5864f1a files/gdb-6.5-scanmem.patch 6114
+SHA256 b9cf4fdc0bc8f8fc94a410ab26d1f85f88f85b52da4f57bc43b4aaab80ff1a82 files/gdb-6.5-scanmem.patch 6114
 AUX gdb-6.x-crash.patch 678 RMD160 59f5cecf412f99baaf58d8c47425c7ca4a4c52b3 SHA1 823e0ab463d750a65e0303464729e4292f9480d0 SHA256 2538ef5c26a4b61c8c748998e9baa3544d4784cdc3b8a253c6fe6c0afb1ec83a
 MD5 7ea8f83bb7b0d70e7e6d6c8cf42292d3 files/gdb-6.x-crash.patch 678
 RMD160 59f5cecf412f99baaf58d8c47425c7ca4a4c52b3 files/gdb-6.x-crash.patch 678
@@ -162,18 +162,18 @@ EBUILD gdb-6.4.ebuild 2995 RMD160 64d7c67013e9029c9387cf26d5c70275d6ae39c9 SHA1 
 MD5 64854d9e61c5f0c03dae7184dafa4f08 gdb-6.4.ebuild 2995
 RMD160 64d7c67013e9029c9387cf26d5c70275d6ae39c9 gdb-6.4.ebuild 2995
 SHA256 b83ed62def04ae3fd8812868c77fa7eb961a8475e57be5d4f9e407c926d6c575 gdb-6.4.ebuild 2995
-EBUILD gdb-6.5-r1.ebuild 2445 RMD160 a81dac60abfc1214cb3a87f89ef196bb9e2add9e SHA1 8e1d195cf96ec694b2512d858ebd65a9b64fae5d SHA256 9482d940b989c1cb0a366571952e94c38014171557a2f28d8a92426485019967
-MD5 ebbfcb3207cd4fe87c02d4fce66a8a37 gdb-6.5-r1.ebuild 2445
-RMD160 a81dac60abfc1214cb3a87f89ef196bb9e2add9e gdb-6.5-r1.ebuild 2445
-SHA256 9482d940b989c1cb0a366571952e94c38014171557a2f28d8a92426485019967 gdb-6.5-r1.ebuild 2445
+EBUILD gdb-6.5-r1.ebuild 2488 RMD160 344a2b7a67b6ee264d1fff0d391a48be5926d91c SHA1 6e6c430eca4f27b9ca2702aa4b6d09b4241d0453 SHA256 589949d41b75cb5a136880a70a013de92c01bc864accdb3fae220f84f570cb32
+MD5 5595be1f82aeb697213e6e11fd87387e gdb-6.5-r1.ebuild 2488
+RMD160 344a2b7a67b6ee264d1fff0d391a48be5926d91c gdb-6.5-r1.ebuild 2488
+SHA256 589949d41b75cb5a136880a70a013de92c01bc864accdb3fae220f84f570cb32 gdb-6.5-r1.ebuild 2488
 EBUILD gdb-6.5.ebuild 2487 RMD160 0a4226ee18bf49f7d1d78ac2f8163c057fe2c297 SHA1 70ef75845b708874ed072f077d4b40f5e9fb1f8d SHA256 478564c21c882249e406ea73a6ccc5f1844ce3d549e26d6428e66cc74a94b54a
 MD5 d9c9bd9149ab7b0078f1fb057f835391 gdb-6.5.ebuild 2487
 RMD160 0a4226ee18bf49f7d1d78ac2f8163c057fe2c297 gdb-6.5.ebuild 2487
 SHA256 478564c21c882249e406ea73a6ccc5f1844ce3d549e26d6428e66cc74a94b54a gdb-6.5.ebuild 2487
-MISC ChangeLog 14084 RMD160 914437ec44d36e865eed0c4b88999ddd16761ef8 SHA1 5059d5d9d151d4a8769050097c2488c9838ad838 SHA256 77e0769a63a6e3775bbbdc510052c7e6bbe5395126523e53ba595cbe54a2c55f
-MD5 8162d38bb8aff5deb54dfbc453c9fce9 ChangeLog 14084
-RMD160 914437ec44d36e865eed0c4b88999ddd16761ef8 ChangeLog 14084
-SHA256 77e0769a63a6e3775bbbdc510052c7e6bbe5395126523e53ba595cbe54a2c55f ChangeLog 14084
+MISC ChangeLog 14264 RMD160 f95c210389176b047eb9b7735a8023c2384c2516 SHA1 61b2d41bf5416972e8f73c3dffa5d78d24aafbe8 SHA256 659dd7c849142c1744cc4d5eee31ea6484c808cd3f934ed251c114eeb18c0bf1
+MD5 a37c06bdeb08dcaf99c6502e6a4a794b ChangeLog 14264
+RMD160 f95c210389176b047eb9b7735a8023c2384c2516 ChangeLog 14264
+SHA256 659dd7c849142c1744cc4d5eee31ea6484c808cd3f934ed251c114eeb18c0bf1 ChangeLog 14264
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
 MD5 567094e03359ffc1c95af7356395228d metadata.xml 162
 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 metadata.xml 162
@@ -215,9 +215,11 @@ MD5 3355b559d843142239ddba932461a7ca files/digest-gdb-6.5-r1 455
 RMD160 c5b703aca040cf069665e1e0c6d4e8154c747f40 files/digest-gdb-6.5-r1 455
 SHA256 1932bbb4d6dc9ae50c50caa7d99dacde75670122c6beb9ea303bb7023ae6ccea files/digest-gdb-6.5-r1 455
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.3 (GNU/Linux)
+Version: GnuPG v1.4.2.2 (GNU/Linux)
 
-iD8DBQFEmhebamhnQswr0vIRArYrAKCRpX2LhFkOZEDOwYIe2LiiuyuFxwCdEaeQ
-UEwurouNms95s/oHyymLmb0=
-=10St
+iQCVAwUBRJpN654WFLgrx1GWAQKv9gP+NVa421vszLA9wbRDy3DLwIYLqyoJULVH
+PZYXUyQdPVVIM6cV2bnzVRdFpDs3Hr4pvkMEfF5EviJya1zpxF6q2jfYzowA48zJ
+j9V3Eva3SB8KgbHeTz81opuvmpcQF5z0RXYEo9wPdQUPgcNBKa1+cv/bf2zWm1f7
+ZGEJYuBFsoo=
+=k8Ex
 -----END PGP SIGNATURE-----
