@@ -1,6 +1,10 @@
 # ChangeLog for sys-devel/gdb
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.94 2006/06/22 04:02:43 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.95 2006/06/22 07:59:23 solar Exp $
+
+  22 Jun 2006; <solar@gentoo.org> files/gdb-6.4-scanmem.patch,
+  files/gdb-6.5-scanmem.patch, gdb-6.5-r1.ebuild:
+  - fix segv in scanmem when no parms are given avoid memleak also
 
   22 Jun 2006; Mike Frysinger <vapier@gentoo.org>
   +files/gdb-6.5-locale.patch, gdb-6.5.ebuild:
